# lut_generation

./: .gitignore  COMPARISON_MODE_USAGE.md  LICENSE  README.md  lut.py  main.py  pyproject.toml  pytest.ini  test_comparison_mode.py  test_grayscale.py
configs/: bw_clip.json  color_clip.json  color_gemma3_12b.json  color_gemma3_27b.json  color_gemma3_4b.json  color_sds.json  mlp_clip.json
models/: __init__.py  base.py  clip.py  sds.py  vlm.py
representations/: __init__.py  base.py  lut.py  mlp.py
scripts/: README.md  generate_luts.py  generate_utility_luts.py  mlp_to_lut.py  movies.txt
scripts/prompts/: cities.txt  colors.txt  directors.txt  directors_bw.txt  emotions.txt  film_formats.txt  film_formats_bw.txt  movies_bw.txt  weather.txt
test/: README.md  __init__.py  conftest.py  test_config.py  test_dataset.py  test_grayscale.py  test_integration.py  test_losses.py  test_lut.py  test_sds.py  test_smoothness.py  test_vlm.py
utils/: __init__.py  config.py  constants.py  dataset.py  device.py  image.py  io.py  losses.py  lut.py  transforms.py
