[project]
name = "lut-generation"
version = "0.1.0"
description = "LUT generation from text prompts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "torch>=2.9.1",
    "torchvision>=0.21.1",
    "transformers>=4.48.3",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.14.6",
]
